--- a/Web/NbuReservationSystem.Web/Views/Reservations/New.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/New.cshtml
@@ -1,8 +1,8 @@
 ﻿@using System.Web.Mvc.Html
+@using NbuReservationSystem.Web.App_GlobalResources.Labels
 @using NbuReservationSystem.Web.App_GlobalResources.Reservations
 @using NbuReservationSystem.Web.Extensions
 @using NbuReservationSystem.Web.Models.Enums
-@using Resources
 
 @model NbuReservationSystem.Web.Models.Requests.Reservations.ReservationViewModel
 @{
@@ -17,17 +17,17 @@
                 {
                     if (this.ViewBag.RequestSucceeded)
                     {
-                        <p class="alert alert-danger" role="alert">@ReservationsLabels.RequestFailed</p>
+                        <p class="alert alert-danger" role="alert">@ReservationLabels.RequestFailed</p>
                     }
                     else
                     {
-                        <p class="alert alert-success" role="alert">@ReservationsLabels.RequestSucceeded</p>
+                        <p class="alert alert-success" role="alert">@ReservationLabels.RequestSucceeded</p>
                     }
                 }
             }
 
             <div class="row text-center">
-                <h1>@ReservationsLabels.NewReservation</h1>
+                <h1>@ReservationLabels.NewReservation</h1>
             </div>
 
             @Html.ValidationSummary(true)
@@ -36,11 +36,11 @@
             {
                 @Html.AntiForgeryToken()
 
-                <h3>@ReservationsLabels.ReservationDetails</h3>
+                <h3>@ReservationLabels.ReservationDetails</h3>
                 <hr />
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Title, ReservationsLabels.Title, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.Title, ReservationLabels.Title, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.Title)
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Description, ReservationsLabels.Description, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.Description, ReservationLabels.Description, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         @Html.TextAreaFor(x => x.Description, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.Description)
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Date, ReservationsLabels.Date, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.Date, ReservationLabels.Date, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         <div class='input-group date' id="new-reservation-date">
                             @Html.TextBoxFor(x => x.Date, new { @class = "form-control" })
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.StartHour, ReservationsLabels.BeginsOn, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.StartHour, ReservationLabels.BeginsOn, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         <div class='input-group date' id="new-reservation-begins-on">
                             @Html.TextBoxFor(x => x.StartHour, new { @class = "form-control" })
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.EndHour, ReservationsLabels.EndsOn, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.EndHour, ReservationLabels.EndsOn, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         <div class='input-group date' id="new-reservation-ends-on">
                             @Html.TextBoxFor(x => x.EndHour, new { @class = "form-control" })
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Assignor, ReservationsLabels.Assignor, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.Assignor, ReservationLabels.Assignor, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         @Html.TextBoxFor(x => x.Assignor, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.Assignor)
@@ -113,17 +113,17 @@
                         <div class="checkbox">
                             <label>
                                 @Html.CheckBoxFor(x => x.IsEquipmentRequired)
-                                @Html.LabelFor(x => x.IsEquipmentRequired, ReservationsLabels.IsEquipmentRequired)
+                                @Html.LabelFor(x => x.IsEquipmentRequired, ReservationLabels.IsEquipmentRequired)
                             </label>
                         </div>
                     </div>
                 </div>
 
-                <h3>@ReservationsLabels.PointOfContact</h3>
+                <h3>@ReservationLabels.PointOfContact</h3>
                 <hr />
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Organizer.Name, ReservationsLabels.Name, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.Organizer.Name, ReservationLabels.Name, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         @Html.TextBoxFor(x => x.Organizer.Name, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.Organizer.Name)
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Organizer.Email, ReservationsLabels.Email, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.Organizer.Email, ReservationLabels.Email, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         @Html.TextBoxFor(x => x.Organizer.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.Organizer.Email)
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(x => x.Organizer.PhoneNumber, ReservationsLabels.PhoneNumber, new { @class = "control-label col-md-4" })
+                    @Html.LabelFor(x => x.Organizer.PhoneNumber, ReservationLabels.PhoneNumber, new { @class = "control-label col-md-4" })
                     <div class="col-md-24">
                         @Html.TextBoxFor(x => x.Organizer.PhoneNumber, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.Organizer.PhoneNumber)
@@ -147,13 +147,13 @@
                 </div>
 
                 <h3 id="repetition-policy">
-                    @ReservationsLabels.RepetitionPolicy <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+                    @ReservationLabels.RepetitionPolicy <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
                 </h3>
                 <hr />
 
                 <div id="repetition-policy-container">
                     <div class="form-group">
-                        @Html.LabelFor(x => x.RepetitionPolicy.RepetitionWindow, ReservationsLabels.RepetitionWindow, new { @class = "control-label col-md-4" })
+                        @Html.LabelFor(x => x.RepetitionPolicy.RepetitionWindow, ReservationLabels.RepetitionWindow, new { @class = "control-label col-md-4" })
                         <div class="col-md-24">
                             @Html.TextBoxFor(x => x.RepetitionPolicy.RepetitionWindow, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.RepetitionPolicy.RepetitionWindow, ErrorMessages.PositiveNumberIsRequired)
@@ -175,17 +175,17 @@
 
                     <div class="form-group">
                         @Html.RadioButtonFor(x => x.RepetitionPolicy.RepetitionType, RepetitionType.OneTimeOnly, new { @class = "control-label col-md-1" })
-                        @Html.Label(ReservationsLabels.OneTimeOnly, new { @class = "control-label col-md-3" })
+                        @Html.Label(ReservationLabels.OneTimeOnly, new { @class = "control-label col-md-3" })
                     </div>
 
                     <div class="form-group">
                         @Html.RadioButtonFor(x => x.RepetitionPolicy.RepetitionType, RepetitionType.Forever, new { @class = "control-label col-md-1" })
-                        @Html.Label(ReservationsLabels.Forever, new { @class = "control-label col-md-3" })
+                        @Html.Label(ReservationLabels.Forever, new { @class = "control-label col-md-3" })
                     </div>
 
                     <div class="form-group">
                         @Html.RadioButtonFor(x => x.RepetitionPolicy.RepetitionType, RepetitionType.EndAfterExactNumberOfRepetitions, new { @class = "control-label col-md-1" })
-                        @Html.LabelFor(x => x.RepetitionPolicy.Repetitions, ReservationsLabels.RepetitionsCount, new { @class = "control-label col-md-3" })
+                        @Html.LabelFor(x => x.RepetitionPolicy.Repetitions, ReservationLabels.RepetitionsCount, new { @class = "control-label col-md-3" })
                         <div class="col-md-24">
                             @Html.TextBoxFor(x => x.RepetitionPolicy.Repetitions, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.RepetitionPolicy.Repetitions, ErrorMessages.PositiveNumberIsRequired)
@@ -194,7 +194,7 @@
 
                     <div class="form-group">
                         @Html.RadioButtonFor(x => x.RepetitionPolicy.RepetitionType, RepetitionType.EndOnSpecificDate, new { @class = "control-label col-md-1" })
-                        @Html.LabelFor(x => x.RepetitionPolicy.EndDate, ReservationsLabels.EndDate, new { @class = "control-label col-md-3" })
+                        @Html.LabelFor(x => x.RepetitionPolicy.EndDate, ReservationLabels.EndDate, new { @class = "control-label col-md-3" })
                         <div class="col-md-24">
                             <div class='input-group date' id="end-date">
                                 @Html.TextBoxFor(x => x.RepetitionPolicy.EndDate, new { @class = "form-control" })
@@ -208,8 +208,8 @@
 
                 <div class="form-group">
                     <div class="col-md-12">
-                        <input type="submit" value="@ReservationsLabels.Save" class="btn btn-default" />
-                        <input type="reset" value="@ReservationsLabels.Clear" class="btn btn-default" />
+                        <input type="submit" value="@ReservationLabels.Save" class="btn btn-default" />
+                        <input type="reset" value="@ReservationLabels.Clear" class="btn btn-default" />
                     </div>
                 </div>
                             }
@@ -258,7 +258,7 @@
                         isRepetitionPolicyHidden = !isRepetitionPolicyHidden;
                     });
 
-                // when the ReservationsLabels are clicked, mark the given checkbox
+                // when the ReservationLabels are clicked, mark the given checkbox
                 $('#repetition-policy-container > div.row label.col-md-3')
                     .toArray()
                     .forEach(function (label) {
