--- a/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarHeader.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarHeader.cshtml
@@ -1,4 +1,4 @@
-﻿@using Weekdays = Resources.Weekdays
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Reservations
 
 @*TODO: Find a way to implement an iterator for the days!*@
 <div class="row">
