Fixed leftover in Login.cshtml

--- a/Web/NbuReservationSystem.Web/Views/Account/Login.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/Login.cshtml
@@ -39,7 +39,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="@ButtonsLabels.Submit" class="btn btn-default" />
+                            <input type="submit" value="@ButtonLabels.Submit" class="btn btn-default" />
                             <hr/>
                             <p>@Html.ActionLink(AccountLabels.ForgottenPassword, "ForgotPassword")</p>
                         </div>
