Prtially integrated halls: - they are now part of the new reservation form - backend verifies that the hall is free - hall name and color are required db fields - removed old index, built on top of reservation date, start hour and end hour - added hall to organizer entity - migrations cleanup - added bootstrap-select lib

--- a/Web/NbuReservationSystem.Web/Content/Site.css
+++ b/Web/NbuReservationSystem.Web/Content/Site.css
@@ -252,3 +252,7 @@ input[type="checkbox"].input-validation-error {
 #bg-color-grey ul {
     padding: 0;
 }
+
+#bootstrap-select-container {
+    margin: 15px auto;
+}
