--- a/Web/NbuReservationSystem.Web/Views/Reservations/New.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/New.cshtml
@@ -300,6 +300,11 @@
                 $('#halls-dropdown li').on('click', function () {
                     $('#HallName').val($(this).text());
                 });
+
+                @if (!string.IsNullOrEmpty(Model.HallName))
+                {
+                    @:$('#HallName').val("@Model.HallName");
+                }
             });
     </script>
 }
