--- a/Web/NbuReservationSystem.Web/Views/Manage/ChangePassword.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Manage/ChangePassword.cshtml
@@ -63,8 +63,8 @@
                     <div class="row">
                         <div class="form-group">
                             <div class="col-md-offset-5 col-md-10">
-                                <input type="reset" value="@ButtonsLabels.Clear" class="btn btn-default"/>
-                                <input type="submit" value="@ButtonsLabels.Submit" class="btn btn-default"/>
+                                <input type="reset" value="@ButtonLabels.Clear" class="btn btn-default"/>
+                                <input type="submit" value="@ButtonLabels.Submit" class="btn btn-default"/>
                             </div>
                         </div>
                     </div>
