--- a/Web/NbuReservationSystem.Web/Views/Account/ResetPassword.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/ResetPassword.cshtml
@@ -43,8 +43,8 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="reset" class="btn btn-default" value="@ButtonsLabels.Clear" />
-                        <input type="submit" class="btn btn-default" value="@ButtonsLabels.Submit" />
+                        <input type="reset" class="btn btn-default" value="@ButtonLabels.Clear" />
+                        <input type="submit" class="btn btn-default" value="@ButtonLabels.Submit" />
                     </div>
                 </div>
             }
