--- a/Web/NbuReservationSystem.Web/Views/Halls/NewHallSuccess.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Halls/NewHallSuccess.cshtml
@@ -1,4 +1,5 @@
-﻿@model NbuReservationSystem.Web.Models.Responses.Halls.NewHallSuccess
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+@model NbuReservationSystem.Web.Models.Responses.Halls.NewHallSuccess
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -6,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-28">
-            <h2>@Resources.HallsLabels.HallAdded</h2>
+            <h2>@HallsLabels.HallAdded</h2>
             <hr/>
         </div>
     </div>
@@ -14,11 +15,11 @@
     <div class="row">
         <div class="col-md-28">
             <p class="alert alert-success" role="alert">
-                @Resources.HallsLabels.HallAdded
+                @HallsLabels.HallAdded
                 @if (Model.Added.HasValue)
                 {
                     <hr />
-                    @(string.Format(Resources.HallsLabels.ProcessedGoogleCalendarEvenets, Model.Added.Value, Model.Total))
+                    @(string.Format(HallsLabels.ProcessedGoogleCalendarEvenets, Model.Added.Value, Model.Total))
                 }
             </p>
         </div>
