--- a/Web/NbuReservationSystem.Web/Views/Reservations/Index.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Index.cshtml
@@ -5,31 +5,43 @@
     ViewBag.Title = "Reservations";
 }
 
-<h2>Reservations</h2>
 
-<div id="reservations-modal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">@ReservationLabels.SelectHall</h4>
-            </div>
-            <div class="modal-body">
-                <select class="selectpicker show-tick " id="halls-dropdown" name="HallName">
-                    @foreach (var hall in Model)
-                    {
-                        <option>@hall</option>
-                    }
-                </select>
-            </div>
-            <div class="modal-footer">
-                <button id="selected-hall-button" type="button" class="btn btn-primary">OK</button>
+
+@if (Model.Count == 0)
+{
+    <div class="container">
+        <div class="row">
+            <div class="col-md-28">
+                <p class="alert alert-danger">@ReservationLabels.NoHalls</p>
             </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <div id="reservations-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">@ReservationLabels.SelectHall</h4>
+                </div>
+                <div class="modal-body">
+                    <select class="selectpicker show-tick " id="halls-dropdown" name="HallName">
+                        @foreach (var hall in Model)
+                        {
+                            <option>@hall</option>
+                        }
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button id="selected-hall-button" type="button" class="btn btn-primary">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-@section scripts {
-    <script type="text/javascript">
+    @section scripts {
+        <script type="text/javascript">
         $(function () {
             $('#selected-hall-button').click(function() {
                 var hall = $("#halls-dropdown option:selected").text();
@@ -44,5 +56,6 @@
                 keyboard: false
             });
         });
-    </script>
+        </script>
+    }
 }
