Added 5x solid black border to the 'today' date in the calendar

--- a/Web/NbuReservationSystem.Web/Content/Site.css
+++ b/Web/NbuReservationSystem.Web/Content/Site.css
@@ -256,3 +256,7 @@ input[type="checkbox"].input-validation-error {
 #bootstrap-select-container {
     margin: 15px auto;
 }
+
+.calendar-today {
+    border-bottom: 5px solid black;
+}
