--- a/Web/NbuReservationSystem.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,13 +5,25 @@
     using (Html.BeginForm("LogOff", "Account", new { area = string.Empty }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Change password", "ChangePassword", "Manage", routeValues: new { area = string.Empty }, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li>
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
-        </li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    Admin panel
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li>@Html.ActionLink("New hall", "NewHall", "Admin")</li>
+                    <li>@Html.ActionLink("Reservations administration", "ReservationsAdministration", "Admin")</li>
+                    <li><a href="#"></a></li>
+                    <li role="separator" class="divider"></li>
+                </ul>
+            </li>
+            <li>
+                @Html.ActionLink("Change password", "ChangePassword", "Manage", routeValues: new { area = string.Empty }, htmlAttributes: new { title = "Manage" })
+            </li>
+            <li>
+                <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+            </li>
+        </ul>
     }
 }
