Color picker is now horizontal and generates only hex values

--- a/Web/NbuReservationSystem.Web/Views/Admin/NewHall.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Admin/NewHall.cshtml
@@ -56,7 +56,10 @@
 @section scripts {
     <script>
         $(function() {
-            $('#color-picker-container').colorpicker();
+            $('#color-picker-container').colorpicker({
+                format: 'hex',
+                horizontal: true
+            });
         });
     </script>
 }
