The color of the calendar entries are now determined by the color of the hall

--- a/Web/NbuReservationSystem.Web/Views/Reservations/ByHall.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/ByHall.cshtml
@@ -5,6 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section css {
+    <style>
+        .reservation-title-container {
+            background-color: @Model.Color
+        }
+    </style>
+}
+
 @Html.Partial("_Calendar", Model)
 
 @section scripts {
