Pressing the 'New reservation' button from the calendar now properly sets the hall value in new reservation form

--- a/Web/NbuReservationSystem.Web/Views/Reservations/New.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/New.cshtml
@@ -316,7 +316,8 @@
 
                         @if (!string.IsNullOrEmpty(Model.HallName))
                         {
-                            @:$('#HallName').val("@Model.HallName");
+                            @:$('#HallName').val('@Model.HallName');
+                            @:$('.selectpicker').selectpicker('val', '@Model.HallName');
                         }
                     });
             </script>
