--- a/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarControls.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarControls.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="col-md-3 pull-right">
         <h2>
-            <a class="btn btn-default pull-right" href="@Url.Action("New", "Reservations", null, Request.Url.Scheme)" role="button">
+            <a class="btn btn-default pull-right" href="@Url.Action("New", "Reservations", new { hall = Model.Hall }, Request.Url.Scheme)" role="button">
                 @ReservationLabels.NewReservation
             </a>
         </h2>
