--- a/Web/NbuReservationSystem.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>@Html.ActionLink("New hall", "NewHall", "Admin")</li>
-                    <li>@Html.ActionLink("Reservations administration", "ReservationsAdministration", "Admin")</li>
+                    <li>@Html.ActionLink("Reservations administration", "Reservations", "Admin")</li>
                     <li><a href="#"></a></li>
                     <li role="separator" class="divider"></li>
                 </ul>
