--- a/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - NbuReservationSystem</title>
+    <title>@ViewBag.Title - CARL</title>
     @*TODO: fix this...!!*@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.4.0/css/bootstrap-colorpicker.css" rel="stylesheet">
@@ -21,12 +22,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("NbuReservationSystem", "Index", "Home", new { area = string.Empty }, new { @class = "navbar-brand" })
+                @Html.ActionLink("CARL", "Index", "Home", new { area = string.Empty }, new { @class = "navbar-brand" })
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapser">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = string.Empty }, null)</li>
-                    <li>@Html.ActionLink("Reservations", "Index", "Reservations", new { area = string.Empty }, null)</li>
+                    <li>@Html.ActionLink(NavBarLabels.Home, "Index", "Home", new { area = string.Empty }, null)</li>
+                    <li>@Html.ActionLink(NavBarLabels.Reservations, "Index", "Reservations", new { area = string.Empty }, null)</li>
                 </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
@@ -39,7 +40,7 @@
     <div class="container">
         <hr />
         <footer>
-            <p class="text-center">Copyright &copy; @DateTime.UtcNow.Year - Всички права запазени</p>
+            <p class="text-center">&copy; @DateTime.UtcNow.Year - @NavBarLabels.AllRightsReserved</p>
         </footer>
         <hr />
     </div>
