--- a/Web/NbuReservationSystem.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@*TODO: this page also needs localization!*@
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
 
 @if (Request.IsAuthenticated)
 {
@@ -8,21 +8,21 @@
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    Admin panel
+                    @NavBarLabels.AdminPanel
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li>@Html.ActionLink("New hall", "NewHall", "Admin")</li>
-                    <li>@Html.ActionLink("Reservations administration", "Reservations", "Admin")</li>
+                    <li>@Html.ActionLink(NavBarLabels.NewHall, "NewHall", "Admin")</li>
+                    <li>@Html.ActionLink(NavBarLabels.ReservationsAdministration, "Reservations", "Admin")</li>
                     <li><a href="#"></a></li>
                     <li role="separator" class="divider"></li>
                 </ul>
             </li>
             <li>
-                @Html.ActionLink("Change password", "ChangePassword", "Manage", routeValues: new { area = string.Empty }, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink(NavBarLabels.ChangePassword, "ChangePassword", "Manage", routeValues: new { area = string.Empty }, htmlAttributes: new { title = "Manage" })
             </li>
             <li>
-                <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+                <a href="javascript:document.getElementById('logoutForm').submit()">@NavBarLabels.LogOff</a>
             </li>
         </ul>
     }
