Fixed page titles

--- a/Web/NbuReservationSystem.Web/Views/Admin/NewHall.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Admin/NewHall.cshtml
@@ -1,7 +1,7 @@
 ﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
 @model NbuReservationSystem.Web.Models.Requests.Halls.HallViewModel
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = HallsLabels.NewHall;
 }
 
 <div class="container">
