--- a/Web/NbuReservationSystem.Web/Views/Admin/NewHallSuccess.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Admin/NewHallSuccess.cshtml
@@ -1,7 +1,7 @@
 ﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
 @model NbuReservationSystem.Web.Models.Responses.Halls.NewHallSuccess
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = @HallsLabels.HallAdded;
 }
 
 <div class="container">
