--- a/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@using Resources = NbuReservationSystem.Web.App_GlobalResources.Home;
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+@using Resources = NbuReservationSystem.Web.App_GlobalResources.Home;
 
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = NavBarLabels.Home;
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
