--- a/Web/NbuReservationSystem.Web/Views/Reservations/ByHall.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/ByHall.cshtml
@@ -1,8 +1,8 @@
-﻿@model NbuReservationSystem.Web.Models.Responses.Reservations.MonthlyReservationsViewModel
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+@model NbuReservationSystem.Web.Models.Responses.Reservations.MonthlyReservationsViewModel
 
 @{
-    ViewBag.Title = "Reservations";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = NavBarLabels.Reservations;
 }
 
 @section css {
