--- a/Web/NbuReservationSystem.Web/Views/Reservations/Index.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Index.cshtml
@@ -2,10 +2,8 @@
 @model IList<string>
 
 @{
-    ViewBag.Title = "Reservations";
+    ViewBag.Title = NavBarLabels.Reservations;
 }
-
-
 
 @if (Model.Count == 0)
 {
