--- a/Web/NbuReservationSystem.Web/Views/Reservations/Modify.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Modify.cshtml
@@ -1,6 +1,10 @@
 ﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
 @model NbuReservationSystem.Web.Models.Requests.Reservations.ModfiyReservationViewModel
 
+@{
+    ViewBag.Title = NavBarLabels.ModifyOrDeleteReservations;
+}
+
 <div class="container">
     <div class="row">
         <div class="col-md-28">
