--- a/Web/NbuReservationSystem.Web/Views/Reservations/New.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/New.cshtml
@@ -6,7 +6,7 @@
 
 @model NbuReservationSystem.Web.Models.Requests.Reservations.ReservationViewModel
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = ReservationLabels.NewReservation;
 }
 
 @{
