--- a/Web/NbuReservationSystem.Web/Views/Admin/NewHall.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Admin/NewHall.cshtml
@@ -42,6 +42,13 @@
                 </div>
 
                 <div class="form-group">
+                    @Html.LabelFor(x => x.GoogleCalendarContent, HallsLabels.GoogleCalendar, new { @class = "control-label col-md-4" })
+                    <div class="col-md-24">
+                        @Html.TextAreaFor(x => x.GoogleCalendarContent, new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <div class="col-md-12">
                         <input type="reset" value="@ButtonLabels.Clear" class="btn btn-default" />
                         <input type="submit" value="@ButtonLabels.Submit" class="btn btn-default" />
