Added about page

--- a/Web/NbuReservationSystem.Web/Content/Site.css
+++ b/Web/NbuReservationSystem.Web/Content/Site.css
@@ -260,3 +260,15 @@ input[type="checkbox"].input-validation-error {
 .calendar-today {
     border-bottom: 5px solid black;
 }
+
+#about-img {
+     border-radius: 25px;
+}
+
+#about-txt {
+    margin-top: 50px;
+}
+
+.About-container {
+    margin-top: 100px;
+}
